# django_chat

./: .dockerignore  .env  .gitignore  .pdm-python  AppVersion.txt  AppVersionHash.txt  Dockerfile  README.md  db.sqlite3  db3.sqlite3  docker-compose.yml  docker_build_auto.bat  manage.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yaml  publish-docker-image.yaml
account/: admin.py  api.py  apps.py  authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
account/apis/: __init__.py  account.py  oauth.py
account/common/: token.py
comment/: admin.py  api.py  apps.py  models.py
config/: .env  app_nginx.conf  default_nginx.conf  entrypoint.sh  gunicorn.py  nginx.conf  welink_nginx.conf
deploy/: deploy.py
django_chat/: api.py  asgi.py  settings.py  urls.py
django_welink/: api.py  asgi.py  settings.py  urls.py  wsgi.py
like/: admin.py  api.py  apps.py  models.py
moment/: MyStorage.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
moment/lib/: minioClient.py  utils.py
oauth/: admin.py  api.py  apps.py  authentication.py  models.py  serializer.py  tests.py  urls.py  views.py
oauth/common/: token.py
post/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py  views.py
post/apis/: __init__.py  comment.py  like.py  post.py
user/: admin.py  apps.py  models.py  tests.py  urls.py  utils.py  views.py
user/lib/: LeafSnowFlake.py  SQLServer.py  TokenUtil.py  utils.py
